# qt-candle-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  candlecanbusplugin.cpp  candlecanbusplugin.h  candledevice.cpp  candledevice.h  qt-candle-plugin.json
